--- a/server/public/main.css
+++ b/server/public/main.css
@@ -16,7 +16,7 @@ body {
 
 
 
-/* HOME STYLING */
+/* HOME & NAV STYLING */
 
 /* This div encompasses the Home component, and isn't doing much right now */
 /* .home-section {;
@@ -54,7 +54,7 @@ body {
 
 /* This is our logo div in the Nav component */
 .marama-logo {
-  height: 30px;
+  height: 25px;
 }
 
 
@@ -78,6 +78,24 @@ a {
   color: white;
 }
 
+/* Currently default styling for all buttons */
+button {
+  color: white;
+  background-color: #ff5753;
+  letter-spacing: 1px;
+  border: none;
+  font-weight: 600;
+  text-decoration: none;
+  font-size: 10px;
+  border-radius: 4px;
+  margin-top: 35px;
+  padding: 11px 17px;
+  
+}
+
+.home-buttons {
+}
+
 
 
 
@@ -95,26 +113,22 @@ a {
   font-weight: bold;
 }
 
+/* This is the secondary heading font */
+.h2-class {
+  font-size: 30px;
+  margin: 70px 0px 10px 0px;
+}
 
 /* This is the body font on all pages. */
 .p-class {
   margin: 1px;
 }
 
-
-
-
-
-
-/* Not sure what these were doing */
-
-/* .type {
-  display: flex;
-  flex-direction: row;
+/* This styles the study provider on the breakdown page */
+.provider-class {
+  font-size: 13px;
+  color: grey;
 }
 
-.typebox {
-  display: flex;
-  flex-direction: column;
-} */
+
 
