--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,10 +1,11 @@
 /* This represents our entire site #a556ae */
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Work Sans", sans-serif;
   color: white;
-  background-color: #411284;
+  background: linear-gradient(#5b0367, #5b0367, #8f1e74, #f1a89e) no-repeat;
   background-repeat: no-repeat;
-  background-size: cover; 
+  background-size: auto 100%; 
+  height: 100%;
 }
 
 
@@ -54,7 +55,7 @@ body {
 
 /* This is our logo div in the Nav component */
 .marama-logo {
-  height: 25px;
+  height: 22px;
 }
 
 
@@ -78,6 +79,45 @@ a {
   color: white;
 }
 
+/* This encompasses the home-blurb and buttons on the home page in the Home component */
+.home-content-box {
+  padding: 50px;
+  align-content: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+}
+
+
+/* This is the heading on the home page in the Home component */
+.home-blurb {
+  font-size: 40px;
+  margin: 60px 0px 20px 0px;
+  text-shadow: 0 0 10px #7d018d;
+}
+
+
+/* This is the sentence below the heading on the home page */
+.home-sentence {
+  text-shadow: 0 0 10px #7d018d;
+}
+
+
+/* This is the container surrounding all buttons on the home page */
+.home-button-container {
+  margin: 20px;
+  max-width: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  /* flex-direction: row; */
+  justify-content: center;
+  /* align-items: center; */
+}
+
+
 /* Currently default styling for all buttons */
 button {
   color: white;
@@ -86,15 +126,23 @@ button {
   border: none;
   font-weight: 600;
   text-decoration: none;
-  font-size: 10px;
+  font-size: 12px;
   border-radius: 4px;
   margin-top: 35px;
-  padding: 11px 17px;
+  padding: 15px 25px;
+  text-align: center;
   
 }
 
 .home-buttons {
+  box-shadow: 0 0 2px #7d018d;
+  margin: 10px;
+  justify-content: center;
+  width: 125px;
 }
+
+
+
 
 
 
@@ -111,6 +159,8 @@ button {
 .page-title-font {
   font-size: 70px;
   font-weight: bold;
+  justify-content: center;
+  align-items: center;
 }
 
 /* This is the secondary heading font */
@@ -129,6 +179,18 @@ button {
   font-size: 13px;
   color: grey;
 }
+
+.stars-background {
+  width: 100%; 
+    z-index: -1;
+    min-height: 0px;
+    min-width: 0px;
+    position: fixed;
+    width: 100%;
+    height: auto;
+    top: 0;
+    left: 0;
+  }
 
 
 
