--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,4 +1,6 @@
-/* This represents our entire site #a556ae */
+/* SITEWIDE STYLING */
+
+/* This represents our entire site */
 body {
   font-family: "Work Sans", sans-serif;
   color: white;
@@ -7,7 +9,6 @@ body {
   background-size: auto 100%; 
   height: 100%;
 }
-
 
 
 /* This div encompasses all components in App */
@@ -59,7 +60,7 @@ body {
 }
 
 
-/* This is the box around our navigation links in the Nav component */ 
+/* This is the box around our navigation links in the Nav component. Not being used. */ 
  /* .nav-links {
   /* justify-content: space-between; 
  } */
@@ -88,13 +89,12 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
 }
 
 
 /* This is the heading on the home page in the Home component */
 .home-blurb {
-  font-size: 40px;
+  font-size: 2.8em;
   margin: 60px 0px 20px 0px;
   text-shadow: 0 0 10px #7d018d;
 }
@@ -102,6 +102,7 @@ a {
 
 /* This is the sentence below the heading on the home page */
 .home-sentence {
+  font-size: 1em;
   text-shadow: 0 0 10px #7d018d;
 }
 
@@ -112,13 +113,11 @@ a {
   max-width: 500px;
   display: flex;
   flex-wrap: wrap;
-  /* flex-direction: row; */
   justify-content: center;
-  /* align-items: center; */
 }
 
 
-/* Currently default styling for all buttons */
+/* Currently default styling on all buttons */
 button {
   color: white;
   background-color: #ff5753;
@@ -134,11 +133,12 @@ button {
   
 }
 
+/* Home button styling only */
 .home-buttons {
   box-shadow: 0 0 2px #7d018d;
   margin: 10px;
   justify-content: center;
-  width: 125px;
+  width: 12em;
 }
 
 
@@ -149,37 +149,7 @@ button {
 
 /* OTHER PAGE STYLING */
 
-/* This is the box encompassing everyting on all content pages */
-.page-section {
-  margin: 50px 60px;
-}
-
-
-/* This is the title font on all content pages */
-.page-title-font {
-  font-size: 70px;
-  font-weight: bold;
-  justify-content: center;
-  align-items: center;
-}
-
-/* This is the secondary heading font */
-.h2-class {
-  font-size: 30px;
-  margin: 70px 0px 10px 0px;
-}
-
-/* This is the body font on all pages. */
-.p-class {
-  margin: 1px;
-}
-
-/* This styles the study provider on the breakdown page */
-.provider-class {
-  font-size: 13px;
-  color: grey;
-}
-
+/* This is the image of stars on all info pages. */
 .stars-background {
   width: 100%; 
     z-index: -1;
@@ -191,6 +161,108 @@ button {
     top: 0;
     left: 0;
   }
+
+
+/* This is the box encompassing everyting on all content pages */
+.page-section {
+  margin: 4em;
+}
+
+@media only screen and (max-width: 750px) {
+  .page-section {
+      margin-left: 0.5em;
+      margin-right: 0.5em;
+  }
+}
+
+
+
+/* This is the box encompassing the header and blurb on each page. */
+.page-heading-section {
+  margin: 6em  0 6em 0;
+  justify-content: center;
+  align-items: center;
+}
+
+
+/* This is the title font on all content pages */
+.page-title-font {
+  font-size: 2.8em;
+  text-align: center;
+  margin: 2em 0 0.5em 0;
+  text-shadow: 0 0 10px #7d018d;
+}
+
+.page-title-blurb {
+  text-align: center;
+  font-size: 1em;
+  margin-left: 6em;
+  margin-right: 6em;
+  /* align-items: center;  */
+}
+
+@media only screen and (min-width: 975px) {
+  .page-title-blurb {
+      max-width: 519px;
+      margin-left: auto;
+      margin-right: auto;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .page-title-blurb {
+      margin-left: 0;
+      margin-right: 0;
+  }
+}
+
+/* margin: 20px;
+max-width: 500px;
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
+
+padding: 50px;
+align-content: center;
+text-align: center;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center; */
+
+
+
+/* This is the secondary heading font */
+.h2-class {
+  font-size: 30px;
+  margin: 70px 0px 10px 0px;
+}
+
+
+/* This is the body font on all pages. */
+.p-class {
+  margin: 1px;
+}
+
+
+/* This styles the study provider on the breakdown page */
+.provider-class {
+  font-size: 13px;
+  color: grey;
+}
+
+
+/* This encompasses content in the Footer */
+/* .footer-box {
+} */
+
+
+/* This styles the Footer text */
+.footer-content {
+  text-align: center;
+  font-size: 11px;
+}
+
 
 
 
