--- a/server/public/main.css
+++ b/server/public/main.css
@@ -236,7 +236,7 @@ button {
   width: 125px;
 }
 
-/*Contact page styling*/
+/*CONTACT page styling*/
 
 form {
   width: 100%;
@@ -288,6 +288,13 @@ input {
   width: 50%;
   border-radius: 4px;
 }
+
+/*ABOUT  page styling*/
+
+/* .icon {
+ height: 2em;
+ width: 2em; 
+} */
 
 /* OTHER PAGE STYLING */
 
