--- a/server/public/main.css
+++ b/server/public/main.css
@@ -174,6 +174,10 @@ button {
   cursor: pointer;
 }
 
+button:hover {
+  background-color: #d64844;
+}
+
 /* Home button styling only */
 .home-buttons {
   box-shadow: 0 0 2px #7d018d;
@@ -182,13 +186,21 @@ button {
   width: 12em;
 }
 
+.home-buttons:hover {
+  background-color: #d64844;
+}
+
 .previous-button {
   background-color: #f2b9ae;
-  box-shadow: 0 0 2px #979597;
+  box-shadow: 0 0 2px #af9894;
   font-size: 10px;
   margin-top: 35px;
   padding: 10px 15px;
   width: 10em;
+}
+
+.previous-button:hover {
+  background-color: #f2a596;
 }
 
 
@@ -415,7 +427,10 @@ align-items: center; */
   padding: 10px 30px;
   text-align: center;
   cursor: pointer;
-  
+}
+
+.button-clear:hover {
+  background-color: #8f1e74;
 }
 
 
