--- a/server/public/main.css
+++ b/server/public/main.css
@@ -631,3 +631,52 @@ align-items: center; */
 }
 
 
+
+
+/* STUDY PAGE */
+
+
+/* Has everything in it */
+.study-box {
+  display: flex;
+  flex-direction: column;
+  margin: 50px 0px;
+}
+
+/* Has just course and button in it */
+.study-box-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+/* Button styling */
+.study-button {
+  color: white;
+  background-color: #ff5753;
+  box-shadow: 0 0 2px #7d018d;
+  letter-spacing: 1px;
+  border: none;
+  font-weight: 600;
+  text-decoration: none;
+  font-size: 12px;
+  border-radius: 4px;
+  margin-top: 0px;
+  padding: 15px 25px;
+  text-align: center;
+  cursor: pointer;
+}
+
+
+.study-box-provider {
+  text-transform: uppercase;
+}
+
+
+.study-box-location {
+  /* margin-bottom: 50px; */
+}
+
+.hr-styling-study-page {
+  margin-top: 4em;
+}
