--- a/server/public/main.css
+++ b/server/public/main.css
@@ -2,10 +2,6 @@
 
 /* This represents our entire site */
 
-/* html {
-  height: 100%;
-} */
-
 body {
   font-family: "Work Sans", sans-serif;
   color: white;
@@ -32,132 +28,13 @@ body {
   display: block;
 }
 
-/* This encompasses content in the Footer 
-.footer-box {
-
-} */
-
-.sticky-footer, .app-box:after {
-  height: 30px;
-}
-
-
-/* This styles the Footer text */
-.footer-content {
-  text-align: center;
-  font-size: 11px;
-  /* position: fixed; */
-  bottom: 0;
-}
-
-
-
-
-
-/* HOME & NAV STYLING */
-
-/* This div encompasses the Home component, and isn't doing much right now */
-/* .home-section {;
-} */
-
-
-/* This div is the the Home image */
-.home-background {
-  z-index: -1;
-  min-height: 0px;
-  min-width: 0px;
-  position: fixed;
-  width: 100%;
-  height: auto;
-  top: 0;
-  left: 0;
-}
-
-/* .blue-home {
-  background-color: red;
-  min-height: 100vh;
-  z-index: -10;
-} */
-
-/* This encompasses everything in the Nav component */
-.nav-header {
-  display: flex;
-  flex-direction: row; 
-  flex-wrap: nowrap;
-  justify-content: space-between;
-}
-
-
-/* This is the box around just the logo div in the Nav component*/
-.nav-logo {
-  display: flex;
-}
-
-
-/* This is our logo div in the Nav component */
-.marama-logo {
-  height: 22px;
-}
-
-
-/* This is the box around our navigation links in the Nav component. Not being used. */ 
- /* .nav-links {
-  /* justify-content: space-between; 
- } */
-
-
-/* This styles the individual divs around the nav links */
-  .nav-link-individual-styling {
-    padding: 15px;
-    font-size: 13px;
-    letter-spacing: 2px;
-}
-
-
-/* This removes formatting from the nav links in the Nav component */
+/* This removes formatting from links */
 a {
   text-decoration: none;
   color: white;
 }
 
-/* This encompasses the home-blurb and buttons on the home page in the Home component */
-.home-content-box {
-  padding: 50px;
-  align-content: center;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-
-/* This is the heading on the home page in the Home component */
-.home-blurb {
-  font-size: 2.8em;
-  margin: 60px 0px 20px 0px;
-  text-shadow: 0 0 10px #7d018d;
-}
-
-
-/* This is the sentence below the heading on the home page */
-.home-sentence {
-  font-size: 1em;
-  text-shadow: 0 0 10px #7d018d;
-}
-
-
-/* This is the container surrounding all buttons on the home page */
-.home-button-container {
-  margin: 20px;
-  max-width: 500px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-
-/* Currently default styling on all buttons */
+/* Default styling on all buttons */
 button {
   color: white;
   background-color: #ff5753;
@@ -174,8 +51,85 @@ button {
   cursor: pointer;
 }
 
+/* Hover colour on generic buttons */
 button:hover {
   background-color: #d64844;
+}
+
+/* Styles previous buttons */
+.previous-button {
+  background-color: #f2b9ae;
+  box-shadow: 0 0 2px #af9894;
+  font-size: 10px;
+  margin-top: 35px;
+  padding: 10px 15px;
+  width: 10em;
+}
+
+/* Hover colour on previous buttons */
+.previous-button:hover {
+  background-color: #f2a596;
+}
+
+/* Image of stars on all info pages. */
+.stars-background {
+  width: 100%; 
+    z-index: -1;
+    min-height: 0px;
+    min-width: 0px;
+    position: fixed;
+    width: 100%;
+    height: auto;
+    top: 0;
+    left: 0;
+  }
+
+
+/* HOME */
+
+/* This div is the the Home image */
+.home-background {
+  z-index: -1;
+  min-height: 0px;
+  min-width: 0px;
+  position: fixed;
+  width: 100%;
+  height: auto;
+  top: 0;
+  left: 0;
+}
+
+/* Encompasses the home-blurb and buttons on the home page in the Home component */
+.home-content-box {
+  padding: 50px;
+  align-content: center;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Heading on the home page in the Home component */
+.home-blurb {
+  font-size: 2.8em;
+  margin: 60px 0px 20px 0px;
+  text-shadow: 0 0 10px #7d018d;
+}
+
+/* Sentence below the heading on the home page */
+.home-sentence {
+  font-size: 1em;
+  text-shadow: 0 0 10px #7d018d;
+}
+
+/* This is the container surrounding all buttons on the home page */
+.home-button-container {
+  margin: 20px;
+  max-width: 500px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 /* Home button styling only */
@@ -190,30 +144,50 @@ button:hover {
   background-color: #d64844;
 }
 
-.previous-button {
-  background-color: #f2b9ae;
-  box-shadow: 0 0 2px #af9894;
-  font-size: 10px;
-  margin-top: 35px;
-  padding: 10px 15px;
-  width: 10em;
+
+/* NAV */
+
+/* Encompasses everything in the Nav component */
+.nav-header {
+  display: flex;
+  flex-direction: row; 
+  flex-wrap: nowrap;
+  justify-content: space-between;
 }
 
-.previous-button:hover {
-  background-color: #f2a596;
+
+/* Box around just the logo div in the Nav component*/
+.nav-logo {
+  display: flex;
 }
 
 
-/*Interest page styling*/
+/* Logo div in the Nav component */
+.marama-logo {
+  height: 22px;
+}
+
+/* Styles the individual divs around the nav links */
+  .nav-link-individual-styling {
+    padding: 15px;
+    font-size: 13px;
+    letter-spacing: 2px;
+}
+
+
+
+
+/* INTEREST PAGE */
+
+/* Surrounds three boxes on interest page */
 .three-container {
-  /* display: flex; /* or inline-flex */
   flex-wrap: wrap;
   align-content: center;
   justify-content: center; 
   margin: 0 0 100px 0;
 }
 
-/* Container around the 3 boxes on the interest page */
+/* Also surrounds 3 boxes on the interest page - might not be needed */
 .interest-section {
   display: flex;
   flex-direction: row;
@@ -226,17 +200,22 @@ button:hover {
 
 
 /* This box goes around each of the content fields */
-.thumbnails {
+.interest-page-thumbnails {
   display: flex;
   flex-direction: column;
   text-align: center;
   align-content: center;
   justify-content: center;
   padding: 20px;
-  margin: 10px; 
-  width: 260px;
+  margin: 10px 0 50px 0; 
+  width: 250px;
 }
 
+.thumbnail-p-text {
+  font-size: 0.95em;
+  font-weight: lighter;
+  line-height: 1.5;
+}
 
 
 .interest-buttons {
@@ -309,23 +288,12 @@ input {
 
 /* OTHER PAGE STYLING */
 
-/* This is the image of stars on all info pages. */
-.stars-background {
-  width: 100%; 
-    z-index: -1;
-    min-height: 0px;
-    min-width: 0px;
-    position: fixed;
-    width: 100%;
-    height: auto;
-    top: 0;
-    left: 0;
-  }
+
 
 
 /* This is the box encompassing everyting on all content pages */
 .page-section {
-  margin: 4em;
+  margin: 4em 5em;
 }
 
 @media only screen and (max-width: 750px) {
@@ -347,15 +315,18 @@ input {
 
 /* This is the title font on all content pages */
 .page-title-font {
-  font-size: 2.8em;
+  font-size: 3.2em;
+  letter-spacing: 2px;
   text-align: center;
-  margin: 2em 0 0.5em 0;
+  margin: 1em 0 0.5em 0;
   text-shadow: 0 0 10px #7d018d;
+  font-weight: bold;
 }
 
 .page-title-blurb {
   text-align: center;
-  font-size: 1em;
+  line-height: 1.5;
+  font-size: 1.05em;
   margin-left: 6em;
   margin-right: 6em;
   /* align-items: center;  */
@@ -722,4 +693,21 @@ align-items: center; */
 
 .grants-page-description {
   max-width: 60%;
+}
+
+
+
+
+
+
+/* FOOTER */
+
+.footer-content {
+  text-align: center;
+  font-size: 11px;
+  bottom: 0;
+}
+
+.sticky-footer, .app-box:after {
+  height: 30px;
 }
