--- a/server/public/main.css
+++ b/server/public/main.css
@@ -8,14 +8,13 @@ body {
   background-size: auto 100%; 
   height: 100%;
   min-height: 100vh;
-  color: red;
 }
 
  .app {
   min-height: 720px;
 } 
 
-/* This div encompasses all components in App */
+/* Encompasses all components in App */
 .app-box {
   margin: 40px 60px;
   margin-bottom: -30px;
@@ -89,6 +88,120 @@ button:hover {
 }
 
 
+@media only screen and (max-width: 750px) {
+  .page-section {
+      margin-left: 0.5em;
+      margin-right: 0.5em;
+  }
+}
+
+/* This is the box encompassing the header and blurb on each page. */
+.page-heading-section {
+  margin: 6em  0 6em 0;
+  justify-content: center;
+  align-items: center;
+}
+
+/* This is the title font on all content pages */
+.page-title-font {
+  font-size: 3.2em;
+  letter-spacing: 2px;
+  text-align: center;
+  margin: 1em 0 0.5em 0;
+  text-shadow: 0 0 10px #7d018d;
+  font-weight: bold;
+}
+
+.page-title-blurb {
+  text-align: center;
+  line-height: 1.5;
+  font-size: 1.05em;
+  margin-left: 6em;
+  margin-right: 6em;
+  /* align-items: center;  */
+}
+
+@media only screen and (min-width: 975px) {
+  .page-title-blurb {
+      max-width: 519px;
+      margin-left: auto;
+      margin-right: auto;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .page-title-blurb {
+      margin-left: 0;
+      margin-right: 0;
+  }
+}
+
+/* This is the secondary heading font */
+.h2-class {
+  font-size: 2em;
+  margin: 70px 0px 10px 0px;
+}
+
+/* This is the secondary heading font */
+.h3-class {
+  font-size: 2em;
+  margin: 0px 0px 10px 0px;
+}
+
+/* This is the body font on all pages. */
+.p-class {
+  margin: 1px;
+}
+
+
+
+/* NAV */
+
+/* Encompasses everything in the Nav component */
+.nav-header {
+  display: flex;
+  flex-direction: row; 
+  flex-wrap: nowrap;
+  justify-content: space-between;
+}
+
+/* Box around just the logo div in the Nav component*/
+.nav-logo {
+  display: flex;
+}
+
+/* Logo div in the Nav component */
+.marama-logo {
+  height: 22px;
+}
+
+/* Styles the individual divs around the nav links */
+  .nav-link-individual-styling {
+    padding: 15px;
+    font-size: 13px;
+    letter-spacing: 2px;
+}
+
+
+/* FOOTER */
+
+.footer-content {
+  text-align: center;
+  font-size: 11px;
+  bottom: 0;
+}
+
+.sticky-footer, .app-box:after {
+  height: 30px;
+}
+
+
+
+
+
+
+
+
 
 /* HOME */
 
@@ -150,34 +263,7 @@ button:hover {
 }
 
 
-/* NAV */
 
-/* Encompasses everything in the Nav component */
-.nav-header {
-  display: flex;
-  flex-direction: row; 
-  flex-wrap: nowrap;
-  justify-content: space-between;
-}
-
-
-/* Box around just the logo div in the Nav component*/
-.nav-logo {
-  display: flex;
-}
-
-
-/* Logo div in the Nav component */
-.marama-logo {
-  height: 22px;
-}
-
-/* Styles the individual divs around the nav links */
-  .nav-link-individual-styling {
-    padding: 15px;
-    font-size: 13px;
-    letter-spacing: 2px;
-}
 
 
 
@@ -232,156 +318,14 @@ button:hover {
   width: 125px;
 }
 
-/*CONTACT page styling*/
-
-form {
-  width: 100%;
-  display: inline-block;
-  text-align: center;
-  margin-right:auto;
-  margin-left:auto;
-}
-
-.submit-flex {
-    display: flex;
-    flex-direction: row;
-    display: inline-block;
-}
-
-.name-email {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-.form-name {
-  display: flex;
-  display: inline-block;
-  text-align: center;
-  flex-direction: row;
-  justify-content: center;
-  padding-bottom: 2em;
-}
-
-.form-email {
-  display: flex;
-  display: inline-block;
-  text-align: center;
-  flex-direction: row;
-  justify-content: center;
-  padding-bottom: 2em;
-}
-
-textarea {
-  margin: 0px;
-  height: 8em;
-  width: 50%;
-  border-radius: 4px;
-}
-
-input {
-  height: 2em;
-  width: 50%;
-  border-radius: 4px;
-}
-
-/*ABOUT  page styling*/
-
-/* .icon {
- height: 2em;
- width: 2em; 
-} */
-
-/* OTHER PAGE STYLING */
 
 
 
 
 
 
-@media only screen and (max-width: 750px) {
-  .page-section {
-      margin-left: 0.5em;
-      margin-right: 0.5em;
-  }
-}
 
 
-
-/* This is the box encompassing the header and blurb on each page. */
-.page-heading-section {
-  margin: 6em  0 6em 0;
-  justify-content: center;
-  align-items: center;
-}
-
-
-/* This is the title font on all content pages */
-.page-title-font {
-  font-size: 3.2em;
-  letter-spacing: 2px;
-  text-align: center;
-  margin: 1em 0 0.5em 0;
-  text-shadow: 0 0 10px #7d018d;
-  font-weight: bold;
-}
-
-.page-title-blurb {
-  text-align: center;
-  line-height: 1.5;
-  font-size: 1.05em;
-  margin-left: 6em;
-  margin-right: 6em;
-  /* align-items: center;  */
-}
-
-@media only screen and (min-width: 975px) {
-  .page-title-blurb {
-      max-width: 519px;
-      margin-left: auto;
-      margin-right: auto;
-  }
-}
-
-@media only screen and (max-width: 800px) {
-  .page-title-blurb {
-      margin-left: 0;
-      margin-right: 0;
-  }
-}
-
-/* margin: 20px;
-max-width: 500px;
-display: flex;
-flex-wrap: wrap;
-justify-content: center;
-
-padding: 50px;
-align-content: center;
-text-align: center;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: center; */
-
-
-
-/* This is the secondary heading font */
-.h2-class {
-  font-size: 2em;
-  margin: 70px 0px 10px 0px;
-}
-
-/* This is the secondary heading font */
-.h3-class {
-  font-size: 2em;
-  margin: 0px 0px 10px 0px;
-}
-
-/* This is the body font on all pages. */
-.p-class {
-  margin: 1px;
-}
 
 .center-text {
   align-content: center;
@@ -804,15 +748,59 @@ margin-bottom: 4em;
   margin-top: 2em;
 }
 
+/*CONTACT page styling*/
 
-/* FOOTER */
-
-.footer-content {
+form {
+  width: 100%;
+  display: inline-block;
   text-align: center;
-  font-size: 11px;
-  bottom: 0;
+  margin-right:auto;
+  margin-left:auto;
 }
 
-.sticky-footer, .app-box:after {
-  height: 30px;
+.submit-flex {
+    display: flex;
+    flex-direction: row;
+    display: inline-block;
 }
+
+.name-email {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  
+.form-name {
+  display: flex;
+  display: inline-block;
+  text-align: center;
+  flex-direction: row;
+  justify-content: center;
+  padding-bottom: 2em;
+}
+
+.form-email {
+  display: flex;
+  display: inline-block;
+  text-align: center;
+  flex-direction: row;
+  justify-content: center;
+  padding-bottom: 2em;
+}
+
+textarea {
+  margin: 0px;
+  height: 8em;
+  width: 50%;
+  border-radius: 4px;
+}
+
+input {
+  height: 2em;
+  width: 50%;
+  border-radius: 4px;
+}
+
+
+
+
