--- a/server/public/main.css
+++ b/server/public/main.css
@@ -333,7 +333,6 @@ button:hover {
   margin-bottom: 10px;
 } 
 
-
 /* Container around the 3 boxes on the interest page */
 .type-section-study {
   display: flex;
@@ -344,7 +343,6 @@ button:hover {
   justify-content: space-between;
   margin-bottom: 40px;
 }
-
 
 /* These boxes go around each of the content fields */
 .type-section-thumbnails {
@@ -370,13 +368,11 @@ button:hover {
   letter-spacing: 2.2px;
 }
 
-
 /* This styles the study location in the thumbnail */
 .type-section-study-location {
   color: white;
   font-size: 13px;
 }
-
 
 /* Clear button styling */
 .button-clear {
@@ -397,7 +393,6 @@ button:hover {
 .button-clear:hover {
   background-color: #8f1e74;
 }
-
 
 /* This block goes around Employment on the Type page */
 .type-container-employment {
@@ -447,6 +442,7 @@ button:hover {
   justify-content: space-between;
   margin: 50px 0 40px 0;
 }
+
 
 /* STUDY */
 
@@ -504,30 +500,7 @@ button:hover {
 }
 
 
-
-
-
-/* JOBS */
-
-.jobs {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-
-
-
-
-
-
-
-/* GRANTS PAGE */
-
-/* .grants-section {
-
-} */
+/* GRANTS */
 
 .grants-box {
   display: flex;
@@ -565,59 +538,17 @@ button:hover {
 }
 
 
-/* NOT SURE PAGE */
+/* JOBS */
 
-.careers-heading {
-  font-size: 2em;
-  text-align: center;
-  margin-top: 2em;
-  margin-bottom: 1em;
-}
-
-.careers-blurb {
-  text-align: center;
-  line-height: 1.5;
-  font-size: 1.05em;
-  margin-left: 6em;
-  margin-right: 6em;
-}
-
-.careers-button {
-  color: white;
-  background-color: #ff5753;
-  box-shadow: 0 0 2px #7d018d;
-  letter-spacing: 1px;
-  border: none;
-  font-weight: 600;
-  text-decoration: none;
-  font-size: 12px;
-  border-radius: 4px;
-  margin-top: 0px;
-  padding: 6px 10px;
-  text-align: center;
-  cursor: pointer;
-  width: 14em;
-  height: 4em;
-  align-content: center;
+.jobs {
+  display: flex;
   justify-content: center;
-  display: flex;
-  
-  /* width: 40%;
-  margin-left: 30%;
-  margin-right: 30% */
-}
-.careers-button-div {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
+  align-items: center;
+  text-align: center;
 }
 
-.careers-button-link {
-  display: flex;
-  align-content: center;
-  justify-content: center;
-  margin-top: 2em;
-}
+
+/* SUPPORT */
 
 
 /* ABOUT  */
@@ -734,23 +665,6 @@ margin-bottom: 4em;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, .3);
 }
 
-/* This styles the study provider on the breakdown page */
-.provider-class {
-  font-size: 13px;
-  color: grey;
-}
-
-
-
-
-
-
-
-
-
-
-
-
 /*CONTACT page styling*/
 
 form {
@@ -803,6 +717,89 @@ input {
   width: 50%;
   border-radius: 4px;
 }
+
+
+
+
+
+
+
+
+/* NOT SURE PAGE */
+
+.careers-heading {
+  font-size: 2em;
+  text-align: center;
+  margin-top: 2em;
+  margin-bottom: 1em;
+}
+
+.careers-blurb {
+  text-align: center;
+  line-height: 1.5;
+  font-size: 1.05em;
+  margin-left: 6em;
+  margin-right: 6em;
+}
+
+.careers-button {
+  color: white;
+  background-color: #ff5753;
+  box-shadow: 0 0 2px #7d018d;
+  letter-spacing: 1px;
+  border: none;
+  font-weight: 600;
+  text-decoration: none;
+  font-size: 12px;
+  border-radius: 4px;
+  margin-top: 0px;
+  padding: 6px 10px;
+  text-align: center;
+  cursor: pointer;
+  width: 14em;
+  height: 4em;
+  align-content: center;
+  justify-content: center;
+  display: flex;
+  
+  /* width: 40%;
+  margin-left: 30%;
+  margin-right: 30% */
+}
+.careers-button-div {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
+
+.careers-button-link {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  margin-top: 2em;
+}
+
+
+
+
+/* This styles the study provider on the breakdown page */
+.provider-class {
+  font-size: 13px;
+  color: grey;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
