--- a/server/public/css/contact.css
+++ b/server/public/css/contact.css
@@ -1,6 +1,6 @@
 /* CONTACT */
 
-form {
+.contactpg form {
     width: 100%;
     display: inline-block;
     text-align: center;
@@ -8,19 +8,19 @@ form {
     margin-left:auto;
   }
   
-  .submit-flex {
+  .contactpg .submit-flex {
       display: flex;
       flex-direction: row;
       display: inline-block;
   }
   
-  .name-email {
+  .contactpg .name-email {
       display: flex;
       flex-direction: column;
       justify-content: center;
     }
     
-  .form-name {
+    .contactpg .form-name {
     display: flex;
     display: inline-block;
     text-align: center;
@@ -29,7 +29,7 @@ form {
     padding-bottom: 2em;
   }
   
-  .form-email {
+  .contactpg .form-email {
     display: flex;
     display: inline-block;
     text-align: center;
@@ -38,14 +38,14 @@ form {
     padding-bottom: 2em;
   }
   
-  textarea {
+  .contactpg textarea {
     margin: 0px;
     height: 8em;
     width: 50%;
     border-radius: 4px;
   }
   
-  input {
+  .contactpg input {
     height: 2em;
     width: 50%;
     border-radius: 4px;
