--- a/server/public/css/main.css
+++ b/server/public/css/main.css
@@ -17,6 +17,7 @@ body {
 /* Encompasses all components in App */
 .app-box {
   margin: 40px 60px;
+  margin-top: 20px;
   margin-bottom: -30px;
   min-height: 720px;
 }
